# Mancala

./: .gitignore  README.md  main.py  pyproject.toml
mancala/: __init__.py  arena.py  cli.py  game.py  mancala.py  play.py  play_cli.py  rule.py  train.py
mancala/agents/: __init__.py  base.py  exact.py  human.py  max.py  minimax.py  mixed.py  negascout.py  random.py  random_agent.py  value_iteration.py
mancala/agents/a3c/: agent.py  model.py  test.py  train.py
mancala/envs/: env.py
mancala/state/: base.py
src/: mancala.py
